[Version] 0.12.0 - make /docs public, add 2 endpoints documentation
